--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,12 @@
     height: 100vh;
     align-items: center;
 }
+
+body{
+    margin:0 0;
+    padding: 0 0 ;
+    background-image: url('../img/fundo1.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
